tryna implement first eval

--- a/eval/tasks/e-001-done/meta.yaml
+++ b/eval/tasks/e-001-done/meta.yaml
@@ -13,4 +13,4 @@ input:
 # Config (parsed by eval pipeline, changes in this section will impact eval pipeline)
 # --------------------------------
 evaluation:
-  type: programmatic
+  type: hybrid
