--- a/eval/tasks/e-001-done/meta.yaml
+++ b/eval/tasks/e-001-done/meta.yaml
@@ -9,13 +9,8 @@ task:
     neglects to add values in row 138."
 
 input:
-  original-input-file: dave-and-busters.xlsx
+  input-file-original: "ib-bench/data-factory/human-generated/dave-and-busters.xlsx"
+  input-file-used: "input-file-original broken in row 140"
   notes:
     "LLM is provided a guide on how to fix an unbalanced balance sheet. We also
     specify that there is only 1 source of error"
-
-# --------------------------------
-# Config (parsed by eval pipeline, changes in this section will impact eval pipeline)
-# --------------------------------
-evaluation:
-  type: programmatic
