refactor(helpers): add type safety with TypedDicts and Literal types
- Add basedpyright config to pyproject.toml (standard mode)
- Add Literal types: Provider, CriterionType, MatchType
- Add TypedDicts: Rubric, RubricCriterion, TaskMeta
- Update Task.rubric to use Rubric type
- Update LLMResponse.parsed_json to dict[str, Any] | None
- Fix SDK type issues with getattr() and cast()
- Type function signatures: get_runner, get_rubric_hash, _extract_json

All 46 unit tests pass.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,9 @@ dependencies = [
     "six>=1.17.0",
     "types-pyyaml>=6.0.12.20250915",
 ]
+
+[tool.basedpyright]
+pythonVersion = "3.10"
+typeCheckingMode = "standard"
+include = ["eval"]
+exclude = ["eval/tests"]
