--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ dependencies = [
     "google-genai>=1.0.0",
     "python-dotenv>=1.0.0",
     "pytest>=8.0.0",
+    "pytest-mock>=3.12.0",
+    "pytest-asyncio>=0.24.0",
+    "vcrpy>=6.0.0",
     "pdfminer-six>=20251227",
     "pdfplumber>=0.5.3",
     "six>=1.17.0",
