--- a/eval/tasks/e-002/meta.yaml
+++ b/eval/tasks/e-002/meta.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=../../schema/meta.schema.json
 task:
   id: e-002
   title: "Summarize Grant's Interest Rate Observer article"
