--- a/eval/tasks/e-004/meta.yaml
+++ b/eval/tasks/e-004/meta.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=../../schema/meta.schema.json
 task:
   id: e-004
   title: "Reconcile AMD GAAP to non-GAAP operating income"
