--- a/eval/tasks/h-001/meta.yaml
+++ b/eval/tasks/h-001/meta.yaml
@@ -1,1 +1,2 @@
-// given a sample LBO model and memo, LLM is asked to generate another one on a public company
+// given a sample<D-F20> LBO model and memo, LLM is asked to generate another
+one on a public company
