--- a/eval/tasks/m-002/meta.yaml
+++ b/eval/tasks/m-002/meta.yaml
@@ -2,27 +2,27 @@
 
 task:
   id: m-002
-  title:
-    "Update Kirby Corp financial model with latest quarterly and annual data"
+  title: "Update Kirby Corp financial model with 2Q24 data"
   type: creating
   category:
     - financial-analysis
   input_type: multi
   description:
-    "Update an existing DCF model for Kirby Corp (KEX) with latest quarterly and
-    annual figures from SEC filings. Model has two key sheets: Model Shell
-    (operating model) and Marine DCF (valuation of Marine Transport segment).
-    LLM must update both sheets while preserving structure. Success requires
-    model balance (row 84 = 0) and no #REF errors. Expected answer: E27 in
-    Marine DCF reflects updated TEV. Rubric is programmatic."
+    "Update an existing model for Kirby Corp (KEX) with 2Q24 quarterly data from
+    SEC filings and company report. Model has one sheet Model Shell. LLM must
+    update just the 2Q24 column and update LQA (Last Quarter Annualised) to be
+    2Q24 while perserving structure. Success requires model balance, no #REF
+    errors and correct update. Expected answer: AQ60=AQ83=5866, G2=2Q24,
+    AQ31=124, AQ93=824, AQ112=3330"
 
 prompt:
   notes:
-    "LLM told to update only necessary cells, preserve structure, update both
-    Model Shell and Marine DCF sheets, verify balance and no #REF errors. Output
-    is Excel file plus JSON with reasoning_steps, changes_made, cell_value_E27."
+    "LLM told to update only necessary cells, preserve structure, verify balance
+    and no #REF errors. Output is Excel file plus JSON with reasoning_steps"
 
 input:
   input-file-original:
-    - "$human/KEX-Model-TODO.xlsx"
-  notes: "TODO: Need source PDF (10-K or 10-Q) with data for model update."
+    - "$human/KEX-Model.xlsx"
+  notes:
+    "Simplified original input for LLM's benefit. LLM needs to source their own
+    10Q and data source (for Marine Transport), we do not provide them"
