--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "pdfplumber>=0.5.3",
     "six>=1.17.0",
     "types-pyyaml>=6.0.12.20250915",
+    "jsonschema>=4.25.1",
 ]
 
 [tool.basedpyright]
