--- a/eval/tasks/e-018/meta.yaml
+++ b/eval/tasks/e-018/meta.yaml
@@ -1,19 +1,25 @@
+# yaml-language-server: $schema=../../schema/meta.schema.json
+
 task:
   id: e-018
-  title: "Fix NWC formula errors in cash flow model"
+  title: "Fix NWC sign error in 3-statement model"
   type: fix-error
   category:
     - financial-analysis
   input_type: excel
-  description:
-    "LLM is provided a cash flow model with incorrect NWC formula (wrong signs,
-    missing components, or incorrect period referencing). LLM must identify and
-    fix the error. Expected answer: corrected NWC formula with proper sign
-    convention. Tests LLM's understanding of working capital mechanics."
+  description: >
+    A 3-statement model has a balance sheet break due to an incorrect sign in the
+    Change in Net Working Capital calculation on the BS & CFS sheet. Identify
+    the error, correct the formula, and explain the fix. Tests ability to audit
+    and repair cash flow linkage errors.
 
 prompt:
-  notes: "LLM should verify sign convention (increase in AR = cash outflow)"
+  notes: >
+    Use input.xlsx as the model. Output includes the corrected Excel file and
+    JSON summary.
 
 input:
-  input-file-original: None
-  notes: "TODO: create model with intentional NWC calculation errors"
+  input-file-original: null
+  notes: >
+    Task folder includes input.xlsx (model with error) and _golden-solution.xlsx
+    for validation.
