chore: prepare repo for open source release
- Add MIT LICENSE
- Remove tmp/ directory and add to .gitignore
- Fix .env.example typo (data-factory -> data-warehouse)
- Remove DEBUG prints and TODOs from runners.py and run.py
- Remove internal docs (CLAUDE.md, CODE-QUALITY.md, IB-bench.md, TODO.md, tasks.md)

--- a/.gitignore
+++ b/.gitignore
@@ -12,11 +12,14 @@ wheels/
 # Environment variables
 .env
 
-.DS_Store
-.prettierrc
-
 # Private task folders
 eval/tasks/_private/
 
 # Local run configs
 eval/configs/
+
+# Misc
+.DS_Store
+.prettierrc
+tmp/
+docs/
