--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@ ANTHROPIC_API_KEY=your-anthropic-key-here
 OPENAI_API_KEY=your-openai-key-here
 GEMINI_API_KEY=your-gemini-key-here
 
-export human="data-factory/human-generated"
-export synthetic="data-factory/synthetic"
+export human="data-warehouse/human-generated"
+export synthetic="data-warehouse/synthetic"
