--- a/eval/configs.example/gemini-example.yaml
+++ b/eval/configs.example/gemini-example.yaml
@@ -1,6 +1,6 @@
-# Test with Gemini
+# Gemini example config
 provider: gemini
-model: gemini-2.5-flash
+model: gemini-2.5-pro
 tasks:
   - e-001
   - e-002
