docs: update README and ARCHITECTURE for open source
- Update config filenames (quick-run.yaml, full-easy-example.yaml)
- Update meta.yaml schema with title, category array, input_type
- Fix OpenAI image handling docs (Vision base64, not code_interpreter)
- Add analyze.py to Core Philosophy section
- Add score.py examples (--tasks, --rescore flags)
- Update license section to reference MIT LICENSE
- Streamline ARCHITECTURE.md (remove verbose sections)
- Untrack export script outputs (leaderboard/, task-results/)

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ CLAUDE.md
 
 # Data warehouse (source files)
 data-warehouse/
+
+# Export script outputs
+eval/export-scripts/leaderboard/
+eval/export-scripts/task-results/
