--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,13 @@ ANTHROPIC_API_KEY=your-anthropic-key-here
 OPENAI_API_KEY=your-openai-key-here
 GEMINI_API_KEY=your-gemini-key-here
 
+# Azure AI Foundry - use one of the following:
+# Option 1: Project endpoint (recommended)
+AZURE_AI_PROJECT_ENDPOINT=https://your-resource.ai.azure.com/api/projects/your-project
+# Option 2: Connection string
+# AZURE_AI_PROJECT_CONNECTION_STRING=your-connection-string
+# Optional: Bing grounding for web search (get from Azure AI Foundry connections)
+# AZURE_BING_CONNECTION_ID=your-bing-connection-id
+
 export human="data-warehouse/human-generated"
 export synthetic="data-warehouse/synthetic"
