added azure as a runner
- llm judge now defaults to azure-v2 w gpt5.2
- runners now separated into a folder
- updated the docs for the new runners

--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,9 @@ GEMINI_API_KEY=your-gemini-key-here
 AZURE_AI_PROJECT_ENDPOINT=https://your-resource.ai.azure.com/api/projects/your-project
 # Option 2: Connection string
 # AZURE_AI_PROJECT_CONNECTION_STRING=your-connection-string
-# Optional: Bing grounding for web search (get from Azure AI Foundry connections)
-# AZURE_BING_CONNECTION_ID=your-bing-connection-id
+
+# Brave Search API - for web search on non-OpenAI models (Mistral, DeepSeek, etc.)
+BRAVE_API_KEY=your-brave-api-key-here
 
 export human="data-warehouse/human-generated"
 export synthetic="data-warehouse/synthetic"
