--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "pytest-mock>=3.12.0",
     "pytest-asyncio>=0.24.0",
     "types-pyyaml>=6.0.12.20250915",
-    "azure-ai-projects>=1.0.0",
+    "azure-ai-projects==2.0.0b3",
     "azure-identity>=1.25.1",
 ]
 
